src/objects/Harvest_Invoice_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Harvest_Invoice__c</referenceTo>
        <relationshipLabel>Invoice Payments</relationshipLabel>
        <relationshipName>Harvest_Invoice_Payment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Paid_At__c</fullName>
        <label>Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recorded_By_Email__c</fullName>
        <label>Recorded By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recorded_By__c</fullName>
        <label>Recorded By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Harvest Invoice Payment</label>
    <nameField>
        <displayFormat>IP-{000000}</displayFormat>
        <label>Harvest Invoice Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harvest Invoice Payment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>